<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            style="@style/titleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_first_urgency_call" />

        <org.fer.urgence.PhoneNumber
            android:id="@+id/phoneNumber0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </org.fer.urgence.PhoneNumber>

        <TextView
            android:id="@+id/textView2"
            style="@style/titleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_second_urgency_call"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <org.fer.urgence.PhoneNumber
            android:id="@+id/phoneNumber1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </org.fer.urgence.PhoneNumber>

        <TextView
            android:id="@+id/textView3"
            style="@style/titleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_third_urgency_call"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <org.fer.urgence.PhoneNumber
            android:id="@+id/phoneNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </org.fer.urgence.PhoneNumber>

        <TextView
            android:id="@+id/textView4"
            style="@style/titleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_four_urgency_call"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <org.fer.urgence.PhoneNumber
            android:id="@+id/phoneNumber3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </org.fer.urgence.PhoneNumber>
    </LinearLayout>

</ScrollView>